--- a/ui_files/End.ui
+++ b/ui_files/End.ui
@@ -129,7 +129,33 @@
     </rect>
    </property>
    <property name="text">
-    <string>保存数据</string>
+    <string>保存所有数据</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="SaveBadButton">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>210</y>
+     <width>61</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>保存错题</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="SaveRightButton">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>210</y>
+     <width>71</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>保存对题</string>
    </property>
   </widget>
  </widget>
