--- a/ui_files/Setting.ui
+++ b/ui_files/Setting.ui
@@ -127,6 +127,13 @@
       </property>
      </widget>
     </item>
+    <item>
+     <widget class="QCheckBox" name="checkBox">
+      <property name="text">
+       <string>多选题</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
  </widget>
